--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient {
+  height: fit-content;
+  z-index: 3;
+  width: 100%;
+  max-width: 640px;
+  background-image: radial-gradient(
+      at 27% 37%,
+      hsla(215, 98%, 61%, 1) 0px,
+      transparent 0%
+    ),
+    radial-gradient(at 97% 21%, rgb(114, 140, 254) 0px, transparent 50%),
+    radial-gradient(at 52% 99%, rgb(58, 162, 253) 0px, transparent 50%),
+    radial-gradient(at 10% 29%, rgb(90, 101, 252) 0px, transparent 50%),
+    radial-gradient(at 97% 96%, rgb(149, 228, 207) 0px, transparent 50%),
+    radial-gradient(at 33% 50%, rgb(68, 48, 226) 0px, transparent 50%),
+    radial-gradient(at 79% 53%, rgb(28, 11, 98) 0px, transparent 50%);
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  filter: blur(100px) saturate(150%);
+  right: 40px;
+  opacity: 0.15;
+}
